Responsive Web Design Latest Projects/BookInventory/styles.css
body {
  display: flex; flex-direction: column; justify-content: center; 
  align-items: center; 
  margin: 50px;
}

table{
  border-collapse: collapse;
  width: 80%; 
}

tr[class="read"] {
  background-image: linear-gradient(white, green);
}

tr[class="to-read"] {
  background-image: linear-gradient(white, red);
}

tr[class="in-progress"] {
  background-image: linear-gradient(white, yellow);
}

span {
  display: inline-block;
}

tr[class="to-read"] span[class="status"] {
  border: 1px solid black;
  background-image: linear-gradient(rgb(247, 209, 209), red);
}

tr[class="read"] span[class="status"] {
  border: 1px solid black;
  background-image: linear-gradient(rgb(182, 226, 185), green);
}

tr[class="in-progress"] span[class="status"] {
  border: 1px solid black;
  background-image: linear-gradient(rgb(224, 226, 182), yellow);
}

span[class="status"],
span[class^="rate"] {
  height: auto;
  width: auto;
  padding: 2px;
}

span[class^="rate"] > span {
  border: 5px solid black;
  border-radius: 10px;
  margin: 1px;
  height: 10px;
  width: 10px;
  background-color: white;
}

span[class~="one"] > span:first-child {
  background-image: linear-gradient(white, yellow);
}

span[class~="two"] > span:nth-child(-n+2) {
  background-image: linear-gradient(white, yellow);
}

span[class~="three"] > span {
  background-image: linear-gradient(white, yellow);
}

